Import latest de, it, and pl translations

--- a/po/pl.po
+++ b/po/pl.po
@@ -1,13 +1,13 @@
 # translation of pl.po to Polish
-# Piotr Drąg <raven@pmail.pl>, 2006.
+# Piotr Drąg <piotrdrag@gmail.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-10 20:12-0500\n"
-"PO-Revision-Date: 2007-09-28 13:17+0200\n"
-"Last-Translator: Piotr Drąg <raven@pmail.pl>\n"
+"PO-Revision-Date: 2008-02-09 21:17+0200\n"
+"Last-Translator: Piotr Drąg <piotrdrag@gmail.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,7 +37,7 @@ msgstr "http://virt-manager.et.redhat.com/"
 #. TRANSLATORS: Replace this string with your names, one name per line.
 #: ../src/vmm-about.glade.h:6
 msgid "translator-credits"
-msgstr "Piotr Drąg <raven@pmail.pl>, 2006"
+msgstr "Piotr Drąg <piotrdrag@gmail.com>, 2006"
 
 #: ../src/vmm-console.glade.h:1
 msgid "<b>The console is currently unavailable</b>"
@@ -49,43 +49,43 @@ msgstr "Uwierzytelnianie"
 
 #: ../src/vmm-console.glade.h:3
 msgid "Ctrl+Alt+F_1"
-msgstr ""
+msgstr "Ctrl+Alt+F_1"
 
 #: ../src/vmm-console.glade.h:4
 msgid "Ctrl+Alt+F_2"
-msgstr ""
+msgstr "Ctrl+Alt+F_2"
 
 #: ../src/vmm-console.glade.h:5
 msgid "Ctrl+Alt+F_3"
-msgstr ""
+msgstr "Ctrl+Alt+F_3"
 
 #: ../src/vmm-console.glade.h:6
 msgid "Ctrl+Alt+F_4"
-msgstr ""
+msgstr "Ctrl+Alt+F_4"
 
 #: ../src/vmm-console.glade.h:7
 msgid "Ctrl+Alt+F_5"
-msgstr ""
+msgstr "Ctrl+Alt+F_5"
 
 #: ../src/vmm-console.glade.h:8
 msgid "Ctrl+Alt+F_6"
-msgstr ""
+msgstr "Ctrl+Alt+F_6"
 
 #: ../src/vmm-console.glade.h:9
 msgid "Ctrl+Alt+F_7"
-msgstr ""
+msgstr "Ctrl+Alt+F_7"
 
 #: ../src/vmm-console.glade.h:10
 msgid "Ctrl+Alt+F_8"
-msgstr ""
+msgstr "Ctrl+Alt+F_8"
 
 #: ../src/vmm-console.glade.h:11
 msgid "Ctrl+Alt+_Backspace"
-msgstr ""
+msgstr "Ctrl+Alt+_Backspace"
 
 #: ../src/vmm-console.glade.h:12
 msgid "Ctrl+Alt+_Del"
-msgstr ""
+msgstr "Ctrl+Alt+_Del"
 
 #: ../src/vmm-console.glade.h:13
 msgid "Login"
@@ -173,7 +173,7 @@ msgstr "_Wstrzymaj"
 
 #: ../src/vmm-console.glade.h:33
 msgid "_Printscreen"
-msgstr ""
+msgstr "_Pobierz zrzut ekranu"
 
 #: ../src/vmm-console.glade.h:34 ../src/vmm-details.glade.h:76
 msgid "_Run"
@@ -185,7 +185,7 @@ msgstr "Zapi_sz"
 
 #: ../src/vmm-console.glade.h:36
 msgid "_Send key"
-msgstr ""
+msgstr "_Wyślij klawisz"
 
 #: ../src/vmm-console.glade.h:37 ../src/vmm-details.glade.h:78
 msgid "_Serial Console"
@@ -1189,9 +1189,8 @@ msgid "5\t"
 msgstr "5\t"
 
 #: ../src/vmm-create.glade.h:10
-#, fuzzy
 msgid "512 MB"
-msgstr "500 mB"
+msgstr "512 MB"
 
 #: ../src/vmm-create.glade.h:11
 msgid "<b>CPUs:</b>"
@@ -1496,10 +1495,10 @@ msgid ""
 "lower amount to grab on startup. Warning: setting VM memory too high will "
 "cause out-of-memory errors in your host domain!"
 msgstr ""
-"Podaj konfigurację pamięci dla tej VM. Można określić maksymalną ilość "
-"pamięci, którą VM może używać oraz opcjonalnie mniejszą ilość do "
-"przechwycenia przy uruchomieniu. Ostrzeżenie: ustawienie za dużej pamięci VM "
-"spowoduje błędy braku pamięci w domenie hosta!"
+"Podaj konfigurację pamięci dla tej VM. Można podać maksymalną ilość pamięci, "
+"którą VM może używać oraz opcjonalnie mniejszą ilość do przechwycenia przy "
+"uruchomieniu. Ostrzeżenie: ustawienie za dużej pamięci VM spowoduje błędy "
+"braku pamięci w domenie hosta!"
 
 #: ../src/vmm-create.glade.h:96
 msgid "Please enter the number of virtual CPUs this VM should start up with."
@@ -1815,9 +1814,8 @@ msgid "Network usage:"
 msgstr "Użycie sieci:"
 
 #: ../src/vmm-details.glade.h:49
-#, fuzzy
 msgid "Permissions:"
-msgstr "P_artycja:"
+msgstr "Uprawnienia:"
 
 #: ../src/vmm-details.glade.h:51
 msgid "Processor"
@@ -2001,8 +1999,6 @@ msgstr "Proszę chwilę poczekać..."
 msgid "Processing..."
 msgstr "Przetwarzanie..."
 
-#. ...the risk is we catch too much though
-#. Damned if we do, damned if we dont :-)(
 #: ../../po/../src/virt-manager.py.in:228
 msgid "Unable to initialize GTK: "
 msgstr "Nie można zainicjować GTK: "
@@ -2251,10 +2247,10 @@ msgid "No media present"
 msgstr "Nie ma nośników"
 
 #: ../../po/../src/virtManager/engine.py:366
-#, fuzzy
 msgid "Saving virtual machines over remote connections is not yet supported."
 msgstr ""
-"Tworzenie nowych sieci na zdalnych połączeniach nie jest jeszcze obsługiwane"
+"Zapisywanie maszyn wirtualnych przez zdalne połączeniach nie jest jeszcze "
+"obsługiwane."
 
 #: ../../po/../src/virtManager/engine.py:379
 msgid "Save Virtual Machine"
@@ -2267,7 +2263,7 @@ msgstr "Zapisywanie maszyny wirtualnej"
 #: ../../po/../src/virtManager/engine.py:398
 #, python-format
 msgid "Error saving domain: %s"
-msgstr ""
+msgstr "Błąd podczas zapisywania domeny: %s"
 
 #: ../../po/../src/virtManager/engine.py:420
 #, python-format
@@ -2285,22 +2281,22 @@ msgstr ""
 #: ../../po/../src/virtManager/engine.py:487
 #, python-format
 msgid "Error shutting down domain: %s"
-msgstr ""
+msgstr "Błąd podczas wyłączania domeny: %s"
 
 #: ../../po/../src/virtManager/engine.py:444
 #, python-format
 msgid "Error pausing domain: %s"
-msgstr ""
+msgstr "Błąd podczas wstrzymywania domeny: %s"
 
 #: ../../po/../src/virtManager/engine.py:459
 #, python-format
 msgid "Error unpausing domain: %s"
-msgstr ""
+msgstr "Błąd podczas wychodzenia domeny ze wstrzymania: %s"
 
 #: ../../po/../src/virtManager/engine.py:474
-#, fuzzy, python-format
+#, python-format
 msgid "Error starting domain: %s"
-msgstr "Błąd podczas ustawiania dysku"
+msgstr "Błąd podczas uruchamiania domeny: %s"
 
 #: ../../po/../src/virtManager/addhardware.py:350
 #: ../../po/../src/virtManager/create.py:483
@@ -2374,18 +2370,15 @@ msgstr "Wymagany jest typ sprzętu"
 
 #: ../../po/../src/virtManager/addhardware.py:644
 msgid "You must specify what type of hardware to add"
-msgstr "Musisz określić typ sprzętu, jaki ma zostać dodany"
+msgstr "Musisz podać typ sprzętu, jaki ma zostać dodany"
 
 #: ../../po/../src/virtManager/addhardware.py:649
-#, fuzzy
 msgid "Storage Path Required"
-msgstr "Wymagany jest adres pamięci masowej"
+msgstr "Wymagana jest ścieżka do pamięci masowej"
 
 #: ../../po/../src/virtManager/addhardware.py:650
-#, fuzzy
 msgid "You must specify a partition or a file for disk storage."
-msgstr ""
-"Musisz określić partycję lub plik dla pamięci masowej dla instalacji gościa"
+msgstr "Musisz podać partycję lub plik dla dyskowej pamięci masowej."
 
 #: ../../po/../src/virtManager/addhardware.py:654
 msgid "Target Device Required"
@@ -2429,9 +2422,8 @@ msgid "There is not enough free space to create the disk"
 msgstr "Nie ma wystarczającej ilości wolnego miejsca, aby utworzyć dysk"
 
 #: ../../po/../src/virtManager/addhardware.py:706
-#, fuzzy
 msgid "Invalid Storage Parameters"
-msgstr "Nieprawidłowy adres pamięci masowej"
+msgstr "Nieprawidłowe parametry pamięci masowej"
 
 #: ../../po/../src/virtManager/addhardware.py:711
 #: ../../po/../src/virtManager/create.py:916
@@ -2505,14 +2497,12 @@ msgid "Do you really want to use the MAC address ?"
 msgstr "Na pewno chcesz użyć adresu MAC?"
 
 #: ../../po/../src/virtManager/addhardware.py:776
-#, fuzzy
 msgid "Unsupported networking type"
-msgstr "Nieobsługiwany typ uwierzytelniania konsoli"
+msgstr "Nieobsługiwany typ sieci"
 
 #: ../../po/../src/virtManager/addhardware.py:778
-#, fuzzy
 msgid "Invalid Network Parameter"
-msgstr "Nieprawidłowa nazwa sieci"
+msgstr "Nieprawidłowy parametr sieci"
 
 #: ../../po/../src/virtManager/addhardware.py:823
 #: ../../po/../src/virtManager/create.py:1075
@@ -2529,9 +2519,6 @@ msgstr "Nie mostkowane"
 msgid "EvTouch USB Graphics Tablet"
 msgstr "Tablet graficzny USB EvTouch"
 
-#. XXX libvirt needs to support 'model' for input devices to distinguish
-#. wacom from evtouch tablets
-#. model.append([_("Wacom Graphics Tablet"), "tablet", "usb", True])
 #: ../../po/../src/virtManager/addhardware.py:847
 #: ../../po/../src/virtManager/details.py:445
 msgid "Generic USB Mouse"
@@ -2542,7 +2529,6 @@ msgstr "Ogólna mysz USB"
 msgid "VNC server"
 msgstr "Serwer VNC"
 
-#. XXX inclined to just not give this choice at all
 #: ../../po/../src/virtManager/addhardware.py:853
 #: ../../po/../src/virtManager/details.py:473
 msgid "Local SDL window"
@@ -2616,7 +2602,7 @@ msgstr "Wymagany jest adres pamięci masowej"
 msgid ""
 "You must specify a partition or a file for storage for the guest install"
 msgstr ""
-"Musisz określić partycję lub plik dla pamięci masowej dla instalacji gościa"
+"Musisz podać partycję lub plik dla pamięci masowej dla instalacji gościa"
 
 #: ../../po/../src/virtManager/create.py:911
 msgid "Invalid Storage Address"
@@ -2712,8 +2698,6 @@ msgstr "Łączenie się z konsolą gościa"
 msgid "Unsupported console authentication type"
 msgstr "Nieobsługiwany typ uwierzytelniania konsoli"
 
-#. If someone feels kind they could extend this code to allow
-#. user to choose what image format they'd like to save in....
 #: ../../po/../src/virtManager/console.py:523
 msgid "Save Virtual Machine Screenshot"
 msgstr "Zapisz zrzut ekranu maszyny wirtualnej"
@@ -2756,9 +2740,9 @@ msgid "Relative Movement"
 msgstr "Ruch relatywny"
 
 #: ../../po/../src/virtManager/details.py:556
-#, fuzzy, python-format
+#, python-format
 msgid "Error Removing Network: %s"
-msgstr "Błąd podczas ustawiania sieci"
+msgstr "Błąd podczas usuwania sieci: %s"
 
 #: ../../po/../src/virtManager/details.py:675
 msgid "Tablet"
@@ -2771,17 +2755,17 @@ msgstr "Mysz"
 #: ../../po/../src/virtManager/details.py:745
 #, python-format
 msgid "Error Removing CDROM: %s"
-msgstr ""
+msgstr "Błąd podczas usuwania CD-ROM-a: %s"
 
 #: ../../po/../src/virtManager/details.py:762
 #, python-format
 msgid "Error Connecting CDROM: %s"
-msgstr ""
+msgstr "Błąd podczas łączenia do CD-ROM-a: %s"
 
 #: ../../po/../src/virtManager/details.py:769
-#, fuzzy, python-format
+#, python-format
 msgid "Error Removing Device: %s"
-msgstr "Błąd podczas ustawiania dysku"
+msgstr "Błąd podczas usuwania urządzenia: %s"
 
 #: ../../po/../src/virtManager/host.py:133
 msgid "Creating new networks on remote connections is not yet supported"
@@ -2813,12 +2797,11 @@ msgid "Unknown status code"
 msgstr "Nieznany kod stanu"
 
 #: ../../po/../src/virtManager/manager.py:290
-#, fuzzy
 msgid "Restoring virtual machines over remote connections is not yet supported"
 msgstr ""
-"Tworzenie nowych sieci na zdalnych połączeniach nie jest jeszcze obsługiwane"
+"Przywracanie maszyn wirtualnych przez zdalne połączenia nie jest jeszcze "
+"obsługiwane"
 
-#. get filename
 #: ../../po/../src/virtManager/manager.py:296
 msgid "Restore Virtual Machine"
 msgstr "Przywróć maszynę wirtualną"
@@ -2854,9 +2837,9 @@ msgid "This will permanently delete the vm \"%s,\" are you sure?"
 msgstr "To na stałe usunie maszynę wirtualną \"%s\". Jesteś pewny?"
 
 #: ../../po/../src/virtManager/manager.py:762
-#, fuzzy, python-format
+#, python-format
 msgid "Error deleting domain: %s"
-msgstr "Błąd podczas ustawiania dysku"
+msgstr "Błąd podczas usuwania domeny: %s"
 
 #: ../../po/../src/virtManager/manager.py:787
 msgid "ID"
@@ -2885,51 +2868,3 @@ msgstr ""
 #: ../../po/../src/virtManager/manager.py:1037
 msgid "Virtual Machine Manager Connection Failure"
 msgstr "Połączenie menedżera maszyn wirtualnych nie powiodło się"
-
-#~ msgid "Too many virtual disks"
-#~ msgstr "Za dużo dysków wirtualnych"
-
-#~ msgid "to complete."
-#~ msgstr "kilka minut."
-
-#~ msgid "Storage Address Is Directory"
-#~ msgstr "Adres pamięci masowej jest folderem"
-
-#~ msgid ""
-#~ "You chose 'Simple File' storage for your storage method, but chose a "
-#~ "directory instead of a file. Please enter a new filename or choose an "
-#~ "existing file."
-#~ msgstr ""
-#~ "Wybrano \"prosty plik\" jako metodę pamięci masowej, ale wybrano folder "
-#~ "zamiast pliku. Podaj nową nazwę pliku lub wybierz istniejący plik."
-
-#~ msgid "MAC adrress must be 17 characters"
-#~ msgstr "Adres MAC musi mieć 17 znaków"
-
-#~ msgid ""
-#~ "MAC address must be a form such as AA:BB:CC:DD:EE:FF, and MAC adrress may "
-#~ "contain numeric and alphabet of A-F(a-f) and ':' characters only"
-#~ msgstr ""
-#~ "Adres MAC musi być w formie takiej jak AA:BB:CC:DD:EE:FF i może zawierać "
-#~ "tylko znaki numeryczne alfabetyczne, takie jak A-F(a-f) oraz \":\""
-
-#~ msgid "Allocation of disk storage and retrieval of "
-#~ msgstr "Przydzielanie dysku i pobieranie"
-
-#~ msgid "the installation images may take a few minutes "
-#~ msgstr "obrazów instalacji może potrwać "
-
-#~ msgid "Invalid Mac address"
-#~ msgstr "Nieprawidłowy adres MAC"
-
-#~ msgid "Verify that:\n"
-#~ msgstr "Sprawdź, czy:\n"
-
-#~ msgid " - A Xen host kernel was booted\n"
-#~ msgstr " - Jądro Xen hosta zostało uruchomione\n"
-
-#~ msgid " - The Xen service has been started\n"
-#~ msgstr " - Usługa Xen została uruchomiona\n"
-
-#~ msgid " - The 'libvirtd' daemon has been started\n"
-#~ msgstr " - Demon \"libvirtd\" został uruchomiony\n"
