Support new polkit dbus API (S.Caglar Onur)

--- a/AUTHORS
+++ b/AUTHORS
@@ -29,6 +29,7 @@ Further patches have been submitted by:
   Eduardo Habkost <ehabkost-at-redhat-dot-com>
   Dan Hork <dan-at-danny-dot-cz>
   Soren Hansen <soren-at-ubuntu-dot-com>
+  S. Çağlar Onur <caglar-at-pardus-dot-org-dot-tr>
 
   <...send a patch & get your name here...>
 
