--- a/AUTHORS
+++ b/AUTHORS
@@ -6,6 +6,7 @@ Virtual Machine Manager code is developed by:
    Daniel Berrange <berrange-at-redhat-dot-com>
    Hugh O. Brock <hbrock-at-redhat-dot-com>
    Jeremy Katz <katzj-at-redhat-dot-com>
+   Cole Robinson <crobinso-at-redhat-dot-com>
 
 The user interaction / interface design and artwork is
 done by:
@@ -15,21 +16,35 @@ done by:
 Further patches have been submitted by:
 
   William Sheehan <william-dot-sheehan-at-openinterface-dot-com>
+  Thorsten Leemhuis <fedora-at-leemhuis-dot-info>
   Karel Zak <kzak-at-redhat-dot-com>
   Damien Durand <splinux25-at-gmail-dot-com>
   Charles Coffing <ccoffing-at-novell-dot-com>
   Mark Cave-Ayland <mark.cave-ayland-at-ilande-dot-co-dot-uk>
   Richard W.M. Jones <rjones-at-redhat-dot-com>
+  Takahashi Tomohiro <takatom-at-jp-dot-fujitsu-dot-com>
   Nobuhiro Itou <fj0873gn-at-aa-dot-jp-dot-fujitsu-dot-com>
+  Takao Fujiwara <takao-dot-fujiwara-at-sun-dot-com>
+  Masayuki Sunou <fj1826dm-at-aa-dot-jp-dot-fujitsu-dot-com>
+  David Robinson <drobinso-at-redhat-dot-com>
   Ville Skytta <ville-dot-skytta-at-iki-dot-fi>
   Mark Johnson <johnson-dot-nh-at-gmail-dot-com>
-  Cole Robinson <crobinso-at-redhat-dot-com>
   Alexander Todorov <atodorov-at-redhat-dot-com>
+  Atsushi Sakai <sakaia-at-jp-dot-fujitsu-dot-com>
   Bernhard Kaindl <bk-at-suse-dot-de>
   Eduardo Habkost <ehabkost-at-redhat-dot-com>
+  Andy Grover <andy-dot-grover-at-oracle-dot-com>
   Dan Hork <dan-at-danny-dot-cz>
+  Henry Zhang <hua-dot-zhang-at-sun-dot-com>
   Soren Hansen <soren-at-ubuntu-dot-com>
+  Shigeki Sagamoto <fj0588di-at-aa-dot-jp-dot-fujitsu-dot-com>
+  Saori Fukuta <fukuta-dot-saori-at-jp-dot-fujitsu-dot-com>
+  Adam Stokes <astokes-at-redhat-dot-com>
+  Jim Meyering <jim-at-meyering-dot-net>
+  Hiroyuki Kaguchi <fj7025cf-at-aa-dot-jp-dot-fujitsu-dot-com>
+  Paul Batkowski <pbatkowski-at-redhat-dot-com>
   S. Çağlar Onur <caglar-at-pardus-dot-org-dot-tr>
+  Claes Strom <cs-at-clabbe-dot-com>
 
   <...send a patch & get your name here...>
 
