Fix app name in 'About' screen (Mike MacCana)

--- a/AUTHORS
+++ b/AUTHORS
@@ -45,6 +45,7 @@ Further patches have been submitted by:
   Paul Batkowski <pbatkowski-at-redhat-dot-com>
   S. Çağlar Onur <caglar-at-pardus-dot-org-dot-tr>
   Claes Strom <cs-at-clabbe-dot-com>
+  Mike MacCana <mmaccana-at-au1-dot-ibm-dot-com>
 
   <...send a patch & get your name here...>
 
