Add more info on bug reporting to man page.

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -65,7 +65,9 @@ Written by Daniel P. Berrange.
 
 =head1 BUGS
 
-Report bugs to the mailing list C<http://www.redhat.com/mailman/listinfo/et-mgmt-tools>
+Report bugs to the mailing list C<http://www.redhat.com/mailman/listinfo/et-mgmt-tools>.
+
+Debugging output can be found in $HOME/.virt-manager/virt-manager.log. Optionally you can run the app from the command line with the --no-fork option to see any uncaught errors (these will also be logged).
 
 =head1 COPYRIGHT
 
